assembly/src/snapshots/miden_assembly__tests__issue_2181_locaddr_bug_assembly_mast_forest.snap
---
source: assembly/src/tests.rs
expression: program.mast_forest()
---
MastForest {
    nodes: [
        Block(
            BasicBlockNode {
                op_batches: [
                    OpBatch {
                        ops: [
                            Noop,
                        ],
                        groups: [
                            0,
                            0,
                            0,
                            0,
                            0,
                            0,
                            0,
                            0,
                        ],
                        op_counts: [
                            1,
                            0,
                            0,
                            0,
                            0,
                            0,
                            0,
                            0,
                        ],
                        num_groups: 1,
                    },
                ],
                digest: Word(
                    [
                        8635338869442206704,
                        11671305615285950885,
                        15253023094703789604,
                        7398108415970215319,
                    ],
                ),
                decorators: [
                    (
                        0,
                        DecoratorId(
                            1,
                        ),
                    ),
                    (
                        0,
                        DecoratorId(
                            2,
                        ),
                    ),
                ],
            },
        ),
        Block(
            BasicBlockNode {
                op_batches: [
                    OpBatch {
                        ops: [
                            Push(
                                4,
                            ),
                            FmpUpdate,
                            Push(
                                18446744069414584317,
                            ),
                            FmpAdd,
                            Push(
                                18446744069414584317,
                            ),
                            FmpAdd,
                            Push(
                                18446744069414584317,
                            ),
                            FmpAdd,
                            Noop,
                            Drop,
                            Drop,
                            Drop,
                            Drop,
                            Push(
                                18446744069414584317,
                            ),
                            FmpUpdate,
                        ],
                        groups: [
                            3778152553175003,
                            4,
                            18446744069414584317,
                            18446744069414584317,
                            18446744069414584317,
                            1639421990057,
                            18446744069414584317,
                            0,
                        ],
                        op_counts: [
                            9,
                            0,
                            0,
                            0,
                            0,
                            6,
                            0,
                            0,
                        ],
                        num_groups: 7,
                    },
                ],
                digest: Word(
                    [
                        16858368813752727632,
                        17715304191637726361,
                        10529096673059218084,
                        10324864871971286732,
                    ],
                ),
                decorators: [
                    (
                        2,
                        DecoratorId(
                            3,
                        ),
                    ),
                    (
                        4,
                        DecoratorId(
                            1,
                        ),
                    ),
                    (
                        4,
                        DecoratorId(
                            5,
                        ),
                    ),
                    (
                        6,
                        DecoratorId(
                            1,
                        ),
                    ),
                    (
                        6,
                        DecoratorId(
                            7,
                        ),
                    ),
                    (
                        8,
                        DecoratorId(
                            1,
                        ),
                    ),
                    (
                        8,
                        DecoratorId(
                            1,
                        ),
                    ),
                    (
                        8,
                        DecoratorId(
                            2,
                        ),
                    ),
                    (
                        9,
                        DecoratorId(
                            1,
                        ),
                    ),
                    (
                        9,
                        DecoratorId(
                            11,
                        ),
                    ),
                ],
            },
        ),
    ],
    roots: [
        MastNodeId(
            0,
        ),
        MastNodeId(
            1,
        ),
    ],
    decorators: [
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            20,
                        ),
                        end: ByteIndex(
                            33,
                        ),
                    },
                ),
                context_name: "$exec::some_proc",
                op: "debug.stack.4",
                num_cycles: 0,
                should_break: false,
            },
        ),
        Debug(
            StackTop(
                4,
            ),
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            38,
                        ),
                        end: ByteIndex(
                            41,
                        ),
                    },
                ),
                context_name: "$exec::some_proc",
                op: "nop",
                num_cycles: 1,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            63,
                        ),
                        end: ByteIndex(
                            72,
                        ),
                    },
                ),
                context_name: "$exec::main",
                op: "locaddr.0",
                num_cycles: 2,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            73,
                        ),
                        end: ByteIndex(
                            86,
                        ),
                    },
                ),
                context_name: "$exec::main",
                op: "debug.stack.4",
                num_cycles: 0,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            91,
                        ),
                        end: ByteIndex(
                            100,
                        ),
                    },
                ),
                context_name: "$exec::main",
                op: "locaddr.0",
                num_cycles: 2,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            101,
                        ),
                        end: ByteIndex(
                            114,
                        ),
                    },
                ),
                context_name: "$exec::main",
                op: "debug.stack.4",
                num_cycles: 0,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            119,
                        ),
                        end: ByteIndex(
                            128,
                        ),
                    },
                ),
                context_name: "$exec::main",
                op: "locaddr.0",
                num_cycles: 2,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            129,
                        ),
                        end: ByteIndex(
                            142,
                        ),
                    },
                ),
                context_name: "$exec::main",
                op: "debug.stack.4",
                num_cycles: 0,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            147,
                        ),
                        end: ByteIndex(
                            161,
                        ),
                    },
                ),
                context_name: "$exec::main",
                op: "exec.some_proc",
                num_cycles: 0,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            166,
                        ),
                        end: ByteIndex(
                            179,
                        ),
                    },
                ),
                context_name: "$exec::main",
                op: "debug.stack.4",
                num_cycles: 0,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            184,
                        ),
                        end: ByteIndex(
                            189,
                        ),
                    },
                ),
                context_name: "$exec::main",
                op: "dropw",
                num_cycles: 4,
                should_break: false,
            },
        ),
        AsmOp(
            AssemblyOp {
                location: Some(
                    Location {
                        uri: Uri(
                            "test3926",
                        ),
                        start: ByteIndex(
                            205,
                        ),
                        end: ByteIndex(
                            214,
                        ),
                    },
                ),
                context_name: "$exec::$main",
                op: "exec.main",
                num_cycles: 0,
                should_break: false,
            },
        ),
    ],
    advice_map: AdviceMap(
        {},
    ),
    error_codes: {},
}
