assembly/src/snapshots/miden_assembly__tests__program_with_proc_locals.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(10)
        push(9)
        push(8)
        push(4)
        fmpupdate
        push(18446744069414584317)
        fmpadd
        mstore
        drop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        add
        push(18446744069414584317)
        fmpadd
        mload
        mul
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        push(18446744069414584317)
        fmpupdate
        noop
        noop
        noop
        noop
        noop
        noop
        noop
    end
end
