assembly/src/snapshots/miden_assembly__tests__u32assertw_with_code.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        u32assert2(0)
        movup3
        movup3
        u32assert2(0)
        movup3
        movup3
        u32assert2(15491226248792286710)
        movup3
        movup3
        u32assert2(15491226248792286710)
        movup3
        movup3
        u32assert2(15491226248792286710)
        movup3
        movup3
        u32assert2(15491226248792286710)
        movup3
        movup3
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
        noop
    end
end
